[package]
name = "apex_omega"
version = "3.1.0"
edition = "2021"

[dependencies]
# Ethereum & Flashbots
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.14"

# Utilities
hex = "0.4"
colored = "2.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
anyhow = "1.0"
url = "2.0"

# Async & Networking
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math & Graph
petgraph = "0.6"

# --- REQUIRED FOR ROOT FILE LOCATION ---
[[bin]]
name = "apex_omega"
path = "main.rs"
